    also accept multiple values via direct invocation after being
    captured through `call/cc`, not just via `values` (#1390)
  - Removed the deprecated C_locative_ref and C_mutate2 C functions.
  - The trace buffer no longer holds on to thread objects, allowing them to
    be garbage collected sooner (#1356, thanks to Kristian Lein-Mathisen)

- Compiler
  - Fixed an off by one allocation problem in generated C code for (list ...).
  - The "-scrutinize" compiler option has been removed.
  - The "-module" compiler option (aliased as "-m") now expects a module name.
  - The generated C output of the compiler is now deterministic: it
    will be bit-for-bit identical when compiling the same Scheme file
    with the same version of the compiler.

- Tools
  - The new "-link" option to csc allows linking with objects from extensions.
  - The new "-libdir" option to csc allows overriding the runtime library
    directory.
  - The ambiguous "-l<libname>" option for csc has been removed (#1193).
  - Removed deprecated "-n" shorthand for "-emit-inline-file" from csc.
  - Removed "chicken-bug" tool.

- Core libraries
  - Removed support for memory-mapped files (posix), queues
    (data-structures), binary-search (data-structures), scan-input-lines
    (utils), group-information (posix) object-eviction (lolevel), and
    compile-file (utils). These are now available as eggs.
  - Removed the srfi-1, srfi-13, srfi-14, srfi-18, srfi-69, and utils
    units. These are now available as eggs.
  - Added the `executable-pathname` procedure for retrieving a path to
    the currently-running executable.
  - Removed all support for SWIG.
  - `sleep` now suspends the current thread when threading is enabled,
    otherwise it sleeps the process. The new `process-sleep` procedure
    in unit posix can be used to sleep the process unconditionally.
  - `with-error-output-to-port' from the ports module has been renamed
    to the more common `with-error-to-port', and `with-error-to-string'