@@ -229,7 +229,7 @@
 ;;; normalize pathname for a particular platform
 
 (define normalize-pathname
-  (let ((bldplt (if (eq? (build-platform) 'mingw32) 'windows 'unix)))
+  (let ((bldplt (if (eq? (software-version) 'mingw32) 'windows 'unix)))
     (define (addpart part parts)
       (cond ((string=? "." part) parts)
             ((string=? ".." part)
